--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 # Nestjs specific
-/dist
-/node_modules
-/build
-/tmp
+*/dist
+*/node_modules
+*/build
+*/tmp
 
 # Logs
 logs
@@ -22,3 +22,64 @@ lerna-debug.log*
 # temp directory
 .temp
 .tmp
+
+# compiled output
+/dist
+*/dist
+*/*/dist
+/node_modules
+*/node_modules
+*/*/node_modules
+*/build
+
+# Logs
+logs
+*.log
+npm-debug.log*
+pnpm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+lerna-debug.log*
+
+# OS
+.DS_Store
+
+# Tests
+*/coverage
+*/.nyc_output
+
+# IDEs and editors
+*/.idea
+.project
+.classpath
+.c9/
+*.launch
+.settings/
+*.sublime-workspace
+
+# IDE - VSCode
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+
+# dotenv environment variable files
+.env
+.env.development.local
+.env.test.local
+.env.production.local
+.env.local
+
+# temp directory
+.temp
+.tmp
+
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
+
+# Diagnostic reports (https://nodejs.org/api/report.html)
+report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
